Fix image render from stretch to correct aspect ratio

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -6,6 +6,10 @@
   margin-top: 1%;
 }
 
+img{
+  object-fit: contain;
+}
+
 .user-row{
   display: flex;
   flex-direction: row;
